Added more features

--- a/config/configuration/database-dev.yml
+++ b/config/configuration/database-dev.yml
@@ -1,4 +1,4 @@
 config:
-    dsn: 'mysql:host=localhost;dbname=G6'
+    dsn: 'mysql:host=localhost;dbname=zigarettenverband'
     user: 'root'
     password: 'root'
