--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,9 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'en'
+   # database_connection: '../src/Model/DatabaseCommunicator.php'
+   # php_mailer: '../vendor/phpmailer/phpmailer/src/PHPMailer.php'
+
 
 services:
     # default configuration for services in *this* file
@@ -26,3 +29,7 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    # App\Service\:
+       # resource: '../src/Service/UploadService.php'
+       # arguments: ['%php_mailer%']
+       # arguments: ['%database_connection%']
