--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,8 +5,8 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'en'
-   # database_connection: '../src/Model/DatabaseCommunicator.php'
-   # php_mailer: '../vendor/phpmailer/phpmailer/src/PHPMailer.php'
+    logger: 'Psr\Log\LoggerInterface'
+    email_service: '../src/Service/EmailService'
 
 
 services:
@@ -27,9 +27,11 @@ services:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
 
+    App\Model\DatabaseCommunicator:
+        calls:
+            - method: setLogger
+              parameters:
+                  - 'logger'
+                  - 'email_service'
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
-    # App\Service\:
-       # resource: '../src/Service/UploadService.php'
-       # arguments: ['%php_mailer%']
-       # arguments: ['%database_connection%']
